:sparkles: Agregando Ropa

--- a/css/main.css
+++ b/css/main.css
@@ -178,4 +178,12 @@ footer {
     height: 300px;
 }
 
+.ropa{
+    background: url('https://res.cloudinary.com/dqibsyfye/image/upload/v1749416896/002_bv6qev.jpg');
+    background-size: cover;
+    height: 300px;
+}
+
+
+
 
