:sparkles: Agregando Hogar

--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,11 @@ footer {
     height: 300px;
 }
 
+.hogar{
+    background: url('https://res.cloudinary.com/dqibsyfye/image/upload/v1749422957/0023_kic3h6.png');
+    background-size: cover;
+    height: 300px;
+}
 
 
 
