--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+
+
 body {
-    font-family: 'Segoe UI', sans-serif;
+    font-family: "Open Sans", sans-serif;
     background-color: #f9f9f9;
     color: #333;
     line-height: 1.6;
@@ -19,12 +25,6 @@ header{
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo{
-    font-size: 1.8rem;
-    font-weight: bold;
-    
 }
 
 .logo img{
@@ -91,23 +91,6 @@ nav ul li:hover {
 .categorias {
     padding: 2rem;
     background-color: #fff;
-    text-align: center;
-}
-
-.categoria-lista {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-}
-
-.categoria {
-    background-color: #f2f2f2;
-    padding: 1rem 2rem;
-    border-radius: 8px;
-    flex: 1 1 150px;
-    max-width: 200px;
     text-align: center;
 }
 
@@ -222,4 +205,51 @@ footer {
             margin: 5px 0;
         }
 
+.container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
+    }
 
+form {
+      background: white;
+      font-family: "Roboto", sans-serif;
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 500px;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+label {
+      font-weight: bold;
+    }
+
+.btnEnviar {
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+
+.btnEnviar {
+      background-color: #be1e2d;
+      color: white;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s ease;
+    }
+.btnEnviar:hover {
+      background-color: #9c1623;
+    }
+
+.ingreso{
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
+}
